--- a/theme/index.html
+++ b/theme/index.html
@@ -52,65 +52,65 @@ FACEBOOK: https://www.facebook.com/themefisher
 
 <nav class="navbar main-nav navbar-expand-lg px-2 px-sm-0 py-2 py-lg-0">
   <div class="container">
-    <a class="navbar-brand" href="index.html"><img src="images/logo.png" alt="logo"></a>
+    <a class="navbar-brand" href="index.html"><img  style="max-width: 50px; margin: 10x;" src="images/ranked logo.png" alt="logo">  <img  style="max-width: 100px;" src="images/ranked text.png" alt="logo"></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
       aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="ti-menu"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav ml-auto">
-        <li class="nav-item dropdown active">
-          <a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown">Home
-            <span><i class="ti-angle-down"></i></span>
-          </a>
+        <!-- <li class="nav-item dropdown active"> -->
+          <!-- <a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown">Home -->
+            <!-- <span><i class="ti-angle-down"></i></span> -->
+          <!-- </a> -->
           <!-- Dropdown list -->
-          <ul class="dropdown-menu">
-            <li><a class="dropdown-item active" href="index.html">Homepage</a></li>
-            <li><a class="dropdown-item" href="homepage-2.html">Homepage 2</a></li>
-            <li><a class="dropdown-item active3" href="homepage-3.html">Homepage 3</a></li>
+          <!-- <ul class="dropdown-menu"> -->
+            <!-- <li><a class="dropdown-item active" href="index.html">Homepage</a></li> -->
+            <!-- <li><a class="dropdown-item" href="homepage-2.html">Homepage 2</a></li> -->
+            <!-- <li><a class="dropdown-item active3" href="homepage-3.html">Homepage 3</a></li> -->
 
-            <li class="dropdown dropdown-submenu dropright">
-              <a class="dropdown-item dropdown-toggle" href="#!" id="dropdown0301" role="button"
-                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Sub Menu</a>
+            <!-- <li class="dropdown dropdown-submenu dropright"> -->
+              <!-- <a class="dropdown-item dropdown-toggle" href="#!" id="dropdown0301" role="button" -->
+                <!-- data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Sub Menu</a> -->
 
-              <ul class="dropdown-menu" aria-labelledby="dropdown0301">
-                <li><a class="dropdown-item" href="index.html">Submenu 11</a></li>
-                <li><a class="dropdown-item" href="index.html">Submenu 12</a></li>
-              </ul>
-            </li>
-          </ul>
-        </li>
-        <li class="nav-item dropdown @@pages">
-          <a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown">Pages
-            <span><i class="ti-angle-down"></i></span>
-          </a>
+              <!-- <ul class="dropdown-menu" aria-labelledby="dropdown0301"> -->
+                <!-- <li><a class="dropdown-item" href="index.html">Submenu 11</a></li> -->
+                <!-- <li><a class="dropdown-item" href="index.html">Submenu 12</a></li> -->
+              <!-- </ul> -->
+            <!-- </li> -->
+          <!-- </ul> -->
+        <!-- </li> -->
+        <!-- <li class="nav-item dropdown @@pages"> -->
+          <!-- <a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown">Pages -->
+            <!-- <span><i class="ti-angle-down"></i></span> -->
+          <!-- </a> -->
           <!-- Dropdown list -->
-          <ul class="dropdown-menu">
-            <li><a class="dropdown-item @@team" href="team.html">Team</a></li>
-            <li><a class="dropdown-item @@career" href="career.html">Career</a></li>
-            <li><a class="dropdown-item @@blog" href="blog.html">Blog</a></li>
-            <li><a class="dropdown-item @@blogSingle" href="blog-single.html">Blog Single</a></li>
-            <li><a class="dropdown-item @@privacy" href="privacy-policy.html">Privacy</a></li>
-            <li><a class="dropdown-item @@faq" href="FAQ.html">FAQ</a></li>
-            <li><a class="dropdown-item" href="sign-in.html">Sign In</a></li>
-            <li><a class="dropdown-item" href="sign-up.html">Sign Up</a></li>
-            <li><a class="dropdown-item" href="404.html">404</a></li>
-            <li><a class="dropdown-item" href="comming-soon.html">Coming Soon</a></li>
+          <!-- <ul class="dropdown-menu"> -->
+            <!-- <li><a class="dropdown-item @@team" href="team.html">Team</a></li> -->
+            <!-- <li><a class="dropdown-item @@career" href="career.html">Career</a></li> -->
+            <!-- <li><a class="dropdown-item @@blog" href="blog.html">Blog</a></li> -->
+            <!-- <li><a class="dropdown-item @@blogSingle" href="blog-single.html">Blog Single</a></li> -->
+            <!-- <li><a class="dropdown-item @@privacy" href="privacy-policy.html">Privacy</a></li> -->
+            <!-- <li><a class="dropdown-item @@faq" href="FAQ.html">FAQ</a></li> -->
+            <!-- <li><a class="dropdown-item" href="sign-in.html">Sign In</a></li> -->
+            <!-- <li><a class="dropdown-item" href="sign-up.html">Sign Up</a></li> -->
+            <!-- <li><a class="dropdown-item" href="404.html">404</a></li> -->
+            <!-- <li><a class="dropdown-item" href="comming-soon.html">Coming Soon</a></li> -->
 
-            <li class="dropdown dropdown-submenu dropleft">
-              <a class="dropdown-item dropdown-toggle" href="#!" id="dropdown0501" role="button"
-                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Sub Menu</a>
+            <!-- <li class="dropdown dropdown-submenu dropleft"> -->
+              <!-- <a class="dropdown-item dropdown-toggle" href="#!" id="dropdown0501" role="button" -->
+                <!-- data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Sub Menu</a> -->
 
-              <ul class="dropdown-menu" aria-labelledby="dropdown0501">
-                <li><a class="dropdown-item" href="index.html">Submenu 21</a></li>
-                <li><a class="dropdown-item" href="index.html">Submenu 22</a></li>
-              </ul>
-            </li>
-          </ul>
-        </li>
-        <li class="nav-item @@about">
-          <a class="nav-link" href="about.html">About</a>
-        </li>
+              <!-- <ul class="dropdown-menu" aria-labelledby="dropdown0501"> -->
+                <!-- <li><a class="dropdown-item" href="index.html">Submenu 21</a></li> -->
+                <!-- <li><a class="dropdown-item" href="index.html">Submenu 22</a></li> -->
+              <!-- </ul> -->
+            <!-- </li> -->
+          <!-- </ul> -->
+        <!-- </li> -->
+        <!-- <li class="nav-item @@about"> -->
+          <!-- <a class="nav-link" href="about.html">About</a> -->
+        <!-- </li> -->
         <li class="nav-item @@contact">
           <a class="nav-link" href="contact.html">Contact</a>
         </li>
@@ -144,10 +144,9 @@ FACEBOOK: https://www.facebook.com/themefisher
 	<div class="container">
 		<div class="row align-items-center">
 			<div class="col-md-6 order-2 order-md-1 text-center text-md-left">
-				<h1 class="text-white font-weight-bold mb-4">Showcase your app with Small Apps</h1>
-				<p class="text-white mb-5">Besides its beautiful design. Laapp is an incredibly rich core framework for you to
-					showcase your App.</p>
-				<a href="FAQ.html" class="btn btn-main-md">Download Now</a>
+				<h1 class="text-white font-weight-bold mb-4">ranKED: Seo Rank Tracker</h1>
+				<p class="text-white mb-5">ranKED the SEO Keywords Rank Tracker is the tool to make sure your websites and blogs remain at the top of Google Search. Easily keep track of the rankings of your website!</p>
+				<a href="https://play.google.com/store/apps/details?id=com.codingee.seo.keyword.rank.tracker&hl=en&gl=US" target="_blank" class="btn btn-main-md">Download Now</a>
 			</div>
 			<div class="col-md-6 text-center order-1 order-md-2">
 				<img class="img-fluid" src="images/mobile.png" alt="screenshot">
@@ -163,21 +162,18 @@ FACEBOOK: https://www.facebook.com/themefisher
 			<div class="row">
 				<div class="col-lg-4 col-md-6 mt-5 mt-md-0 text-center">
 					<i class="ti-paint-bucket text-primary h1"></i>
-					<h3 class="mt-4 text-capitalize h5 ">themes made easy</h3>
-					<p class="regular text-muted">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam non, recusandae
-						tempore ipsam dignissimos molestias.</p>
+					<h3 class="mt-4 text-capitalize h5 ">Track Multiple Domains</h3>
+					<p class="regular text-muted">Track multiple domains as well as multiple keywords easily.</p>
 				</div>
 				<div class="col-lg-4 col-md-6 mt-5 mt-md-0 text-center">
 					<i class="ti-shine text-primary h1"></i>
-					<h3 class="mt-4 text-capitalize h5 ">powerful design</h3>
-					<p class="regular text-muted">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam non, recusandae
-						tempore ipsam dignissimos molestias.</p>
+					<h3 class="mt-4 text-capitalize h5 ">Detailed Keyword Analysis</h3>
+					<p class="regular text-muted">Detailed keyword analysis so that you can make an informed decision as to how to change your SEO campaign.</p>
 				</div>
 				<div class="col-lg-4 col-md-12 mt-5 mt-lg-0 text-center">
 					<i class="ti-thought text-primary h1"></i>
-					<h3 class="mt-4 text-capitalize h5 ">creative content</h3>
-					<p class="regular text-muted">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam non, recusandae
-						tempore ipsam dignissimos molestias.</p>
+					<h3 class="mt-4 text-capitalize h5 ">Track full history</h3>
+					<p class="regular text-muted">See the full ranking history to figure out what's working for you and to make sure you are on the right track!</p>
 					</p>
 				</div>
 			</div>
@@ -200,15 +196,12 @@ FACEBOOK: https://www.facebook.com/themefisher
 			<div class="col-lg-6 mr-auto align-self-center">
 				<div class="feature-content">
 					<!-- Feature Title -->
-					<h2>Increase your productivity with <a
-							href="https://themefisher.com/products/small-apps-free-app-landing-page-template/">Small Apps</a></h2>
+					<h2>No need to wait</h2>
 					<!-- Feature Description -->
-					<p class="desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-						labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-						aliquip ex ea commodo consequat.</p>
+					<p class="desc">Unlike some other apps, all the heavy lifting is done by our servers. Just click track and the magic will happen on our side. No need to wait in the app, we will notify you once the results are computed so that you can spend your precious time in other important tasks! :)</p>
 				</div>
 				<!-- Testimonial Quote -->
-				<div class="testimonial">
+				<!-- <div class="testimonial">
 					<p>
 						"InVision is a window into everything that's being designed at Twitter. It gets all of our best work in one
 						place."
@@ -219,7 +212,7 @@ FACEBOOK: https://www.facebook.com/themefisher
 						</li>
 						<li class="list-inline-item">Jonathon Andrew , Themefisher.com</li>
 					</ul>
-				</div>
+				</div> -->
 			</div>
 		</div>
 	</div>
@@ -231,15 +224,14 @@ FACEBOOK: https://www.facebook.com/themefisher
 			<div class="col-lg-6 ml-auto align-self-center">
 				<div class="feature-content">
 					<!-- Feature Title -->
-					<h2>Increase your productivity with <a
-							href="https://themefisher.com/products/small-apps-free-app-landing-page-template/">Small Apps</a></h2>
+					<h2>Detailed Analysis and full history</h2>
 					<!-- Feature Description -->
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-						dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
-						ea commodo consequat.</p>
+					<p>Make sure that all your efforts are in the right direction and bearing fruit by checking the ranking history of your keywords.
+						Detailed analysis to figure out what works the best for your SEO campaign! </p>
 				</div>
 				<!-- Testimonial Quote -->
-				<div class="testimonial">
+				<!-- Testimonial Quote -->
+				<!-- <div class="testimonial">
 					<p>
 						"InVision is a window into everything that's being designed at Twitter. It gets all of our best work in one
 						place."
@@ -250,7 +242,7 @@ FACEBOOK: https://www.facebook.com/themefisher
 						</li>
 						<li class="list-inline-item">Jonathon Andrew , Themefisher.com</li>
 					</ul>
-				</div>
+				</div> -->
 			</div>
 			<div class="col-lg-6 mr-auto justify-content-center">
 				<!-- Feature mockup -->
@@ -271,9 +263,9 @@ FACEBOOK: https://www.facebook.com/themefisher
 		<div class="row">
 			<div class="col-lg-12">
 				<div class="section-title">
-					<h2>An Interface For Lifestyle</h2>
-					<p><a href="https://themefisher.com/products/small-apps-free-app-landing-page-template/">Small Apps</a> makes
-						it easy to stay on top of your Life Style. No late tasks. No gimmicks.</p>
+					<h2>An Easy To Use Interface For All Devices</h2>
+					<!-- <p><a href="https://themefisher.com/products/small-apps-free-app-landing-page-template/">Small Apps</a> makes
+						it easy to stay on top of your Life Style. No late tasks. No gimmicks.</p> -->
 				</div>
 			</div>
 		</div>
@@ -293,9 +285,9 @@ FACEBOOK: https://www.facebook.com/themefisher
 								<!-- Icon -->
 								<i class="ti-bookmark"></i>
 								<!-- Heading -->
-								<h3>Easy Prototyping</h3>
+								<h3>Cross Platform Support</h3>
 								<!-- Description -->
-								<p>Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Curabitur aliquet quam id dui</p>
+								<p>ranKED is available on all android devices and on the web as well so that you can keep track of your ranks from any device!</p>
 							</div>
 						</div>
 						<div class="col-md-6 col-xs-12">
@@ -304,9 +296,9 @@ FACEBOOK: https://www.facebook.com/themefisher
 								<!-- Icon -->
 								<i class="ti-pulse"></i>
 								<!-- Heading -->
-								<h3>Sensor Bridge</h3>
+								<h3>Automated Tracking</h3>
 								<!-- Description -->
-								<p>Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Curabitur aliquet quam id dui</p>
+								<p>Automagically get the rankings of your keywords at a suitable time!</p>
 							</div>
 						</div>
 						<div class="col-md-6 col-xs-12">
@@ -315,9 +307,9 @@ FACEBOOK: https://www.facebook.com/themefisher
 								<!-- Icon -->
 								<i class="ti-bar-chart"></i>
 								<!-- Heading -->
-								<h3>Strategist</h3>
+								<h3>Ranking Graphs</h3>
 								<!-- Description -->
-								<p>Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Curabitur aliquet quam id dui</p>
+								<p>Ranking graphs and charts make it easier to analyse your SEO campaigns and make sure your efforts are on the right track! </p>
 							</div>
 						</div>
 						<div class="col-md-6 col-xs-12">
@@ -326,9 +318,9 @@ FACEBOOK: https://www.facebook.com/themefisher
 								<!-- Icon -->
 								<i class="ti-panel"></i>
 								<!-- Heading -->
-								<h3>Art Direction</h3>
+								<h3>Flexible Volumes</h3>
 								<!-- Description -->
-								<p>Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Curabitur aliquet quam id dui</p>
+								<p>Our platform is for individuals and huge enterprises alike. Depending on your volume and size, we have a plan which suits you! </p>
 							</div>
 						</div>
 					</div>
@@ -378,17 +370,14 @@ FACEBOOK: https://www.facebook.com/themefisher
 						<div class="block shadow">
 							<!-- Speech -->
 							<p>
-								Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a. Donec sollicitudin molestie malesuada.
-								Donec sollicitudin molestie malesuada. Pellentesque in ipsum id orci porta dapibus. Lorem ipsum dolor
-								sit amet, consectetur adipiscing elit. Pellentesque in ipsum id orci porta dapibus. Quisque velit nisi,
-								pretium ut lacinia in, elementum id enim.
+								It's an amazing app to track your keywords with a good and intuitive UI. Would definitely recommend it.
 							</p>
 							<!-- Person Thumb -->
 							<div class="image">
-								<img src="images/testimonial/feature-testimonial-thumb.jpg" alt="image">
+								<img src="images/testimonial/vishnu.jpg" alt="image">
 							</div>
 							<!-- Name and Company -->
-							<cite>Abraham Linkon , Themefisher.com</cite>
+							<cite>Vishnu Vasudevan, Blogger</cite>
 						</div>
 					</div>
 					<!-- Testimonial 01 -->
@@ -396,17 +385,14 @@ FACEBOOK: https://www.facebook.com/themefisher
 						<div class="block shadow">
 							<!-- Speech -->
 							<p>
-								Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a. Donec sollicitudin molestie malesuada.
-								Donec sollicitudin molestie malesuada. Pellentesque in ipsum id orci porta dapibus. Lorem ipsum dolor
-								sit amet, consectetur adipiscing elit. Pellentesque in ipsum id orci porta dapibus. Quisque velit nisi,
-								pretium ut lacinia in, elementum id enim.
+								I highly recommend it.
 							</p>
 							<!-- Person Thumb -->
 							<div class="image">
-								<img src="images/testimonial/feature-testimonial-thumb.jpg" alt="image">
+								<img src="images/testimonial/2.jpg" alt="image">
 							</div>
 							<!-- Name and Company -->
-							<cite>Abraham Linkon , Themefisher.com</cite>
+							<cite>Semih Metin</cite>
 						</div>
 					</div>
 					<!-- Testimonial 01 -->
@@ -414,37 +400,34 @@ FACEBOOK: https://www.facebook.com/themefisher
 						<div class="block shadow">
 							<!-- Speech -->
 							<p>
-								Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a. Donec sollicitudin molestie malesuada.
-								Donec sollicitudin molestie malesuada. Pellentesque in ipsum id orci porta dapibus. Lorem ipsum dolor
-								sit amet, consectetur adipiscing elit. Pellentesque in ipsum id orci porta dapibus. Quisque velit nisi,
-								pretium ut lacinia in, elementum id enim.
+								Nice app, was able to track the keywords I wanted to easily and efficiently. thanks for this.
 							</p>
 							<!-- Person Thumb -->
 							<div class="image">
-								<img src="images/testimonial/feature-testimonial-thumb.jpg" alt="image">
+								<img src="https://lh4.googleusercontent.com/-uNfAaMiKABQ/AAAAAAAAAAI/AAAAAAAAAAA/AMZuuckqUEu9XcDqDys0hJAmTHvBWsFa4A/photo.jpg" alt="image">
 							</div>
 							<!-- Name and Company -->
-							<cite>Abraham Linkon , Themefisher.com</cite>
+							<cite>Bhanu Pratap Singh</cite>
 						</div>
 					</div>
 					<!-- Testimonial 01 -->
-					<div class="item">
-						<div class="block shadow">
+					<!-- <div class="item"> -->
+						<!-- <div class="block shadow"> -->
 							<!-- Speech -->
-							<p>
+							<!-- <p>
 								Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a. Donec sollicitudin molestie malesuada.
 								Donec sollicitudin molestie malesuada. Pellentesque in ipsum id orci porta dapibus. Lorem ipsum dolor
 								sit amet, consectetur adipiscing elit. Pellentesque in ipsum id orci porta dapibus. Quisque velit nisi,
 								pretium ut lacinia in, elementum id enim.
-							</p>
+							</p> -->
 							<!-- Person Thumb -->
-							<div class="image">
+							<!-- <div class="image">
 								<img src="images/testimonial/feature-testimonial-thumb.jpg" alt="image">
-							</div>
+							</div> -->
 							<!-- Name and Company -->
-							<cite>Abraham Linkon , Themefisher.com</cite>
-						</div>
-					</div>
+							<!-- <cite>Abraham Linkon , Themefisher.com</cite> -->
+						<!-- </div>
+					</div> -->
 				</div>
 			</div>
 		</div>
