--- a/theme/index.html
+++ b/theme/index.html
@@ -144,7 +144,7 @@ FACEBOOK: https://www.facebook.com/themefisher
 	<div class="container">
 		<div class="row align-items-center">
 			<div class="col-md-6 order-2 order-md-1 text-center text-md-left">
-				<h1 class="text-white font-weight-bold mb-4">ranKED: Seo Rank Tracker</h1>
+				<h1 class="text-white font-weight-bold mb-4">ranKED: SEO Rank Tracker</h1>
 				<p class="text-white mb-5">ranKED the SEO Keywords Rank Tracker is the tool to make sure your websites and blogs remain at the top of Google Search. Easily keep track of the rankings of your website!</p>
 				<a href="https://play.google.com/store/apps/details?id=com.codingee.seo.keyword.rank.tracker&hl=en&gl=US" target="_blank" class="btn btn-main-md">Download Now</a>
 			</div>
@@ -190,7 +190,7 @@ FACEBOOK: https://www.facebook.com/themefisher
 			<div class="col-lg-6 ml-auto justify-content-center">
 				<!-- Feature Mockup -->
 				<div class="image-content" data-aos="fade-right">
-					<img class="img-fluid" src="images/feature/feature-new-01.jpg" alt="iphone">
+					<img class="img-fluid" src="images/feature/feature-new-01.png" alt="iphone">
 				</div>
 			</div>
 			<div class="col-lg-6 mr-auto align-self-center">
@@ -247,7 +247,7 @@ FACEBOOK: https://www.facebook.com/themefisher
 			<div class="col-lg-6 mr-auto justify-content-center">
 				<!-- Feature mockup -->
 				<div class="image-content" data-aos="fade-left">
-					<img class="img-fluid" src="images/feature/feature-new-02.jpg" alt="ipad">
+					<img class="img-fluid" src="images/feature/feature-new-02.png" alt="ipad">
 				</div>
 			</div>
 		</div>
