--- a/theme/index.html
+++ b/theme/index.html
@@ -377,7 +377,7 @@ FACEBOOK: https://www.facebook.com/themefisher
 							<!-- Person Thumb -->
 							<p>⭐⭐⭐⭐⭐</p>
 							<div class="image">
-								<img src="https://play-lh.googleusercontent.com/a-/AOh14Ghm3HLw8_nL7DzKmSOVOmzwrraLXnyDtxo6EDtivZQ=w48-h48-n" alt="ranked-seo-rank-tracker-user-review">
+								<img src="https://play-lh.googleusercontent.com/a-/AOh14Ghm3HLw8_nL7DzKmSOVOmzwrraLXnyDtxo6EDtivZQ=w48-h48-n" alt="image">
 							</div>
 							<!-- Name and Company -->
 							<cite>Anand Kumar, SEO Expert</cite>
@@ -409,7 +409,7 @@ FACEBOOK: https://www.facebook.com/themefisher
 							<!-- Person Thumb -->
 							<p>⭐⭐⭐⭐⭐</p>
 							<div class="image">
-								<img src="images/testimonial/2.jpg" alt="ranked-seo-rank-tracker-user-review">
+								<img src="images/testimonial/2.jpg" alt="image">
 							</div>
 							<!-- Name and Company -->
 							<cite>Semih Metin</cite>
@@ -425,7 +425,7 @@ FACEBOOK: https://www.facebook.com/themefisher
 							<!-- Person Thumb -->
 							<p>⭐⭐⭐⭐⭐</p>
 							<div class="image">
-								<img src="https://lh4.googleusercontent.com/-uNfAaMiKABQ/AAAAAAAAAAI/AAAAAAAAAAA/AMZuuckqUEu9XcDqDys0hJAmTHvBWsFa4A/photo.jpg" alt="ranked-seo-rank-tracker-user-review">
+								<img src="https://lh4.googleusercontent.com/-uNfAaMiKABQ/AAAAAAAAAAI/AAAAAAAAAAA/AMZuuckqUEu9XcDqDys0hJAmTHvBWsFa4A/photo.jpg" alt="image">
 							</div>
 							<!-- Name and Company -->
 							<cite>Bhanu Pratap Singh</cite>
